# ducklake_elt_diabetes

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  rest_api_example.duckdb  run_pipeline.ps1
.duckdb/: ntb_exploration.json
dlthub/: rest_api_pipeline.py
ingestion/: dlt_ingest.py  ingest_dwh.py  raw_download.py  setup_duckdb_ui.py
transformation/: README.md  dbt_project.yml  profiles.yml
transformation/models/docs/: overview.md
transformation/models/marts/: bridge_patient_visits_diagnosis.sql  bridge_patient_visits_diagnosis.yml  dim_admission_sources.sql  dim_admission_sources.yml  dim_admission_types.sql  dim_admission_types.yml  dim_diagnosis.sql  dim_diagnosis.yml  dim_discharge_dispositions.sql  dim_discharge_dispositions.yml  fact_patient_visits.sql  fact_patient_visits.yml
transformation/models/marts/_exports/: export_diabetes_stats.sql  export_diabetes_stats.yml
transformation/models/marts/_exposures/: exposures.yml
transformation/models/staging/: _sources.yml  stg_diabetes__mappings.sql  stg_diabetes__patient_records.sql  stg_idc_9__diagnosis.sql
