[project]
name = "etl-diabetes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.9.8",
    "dbt-duckdb",
    "duckdb>=1.3.0",
]

[tool.uv.sources]
dbt-duckdb = { git = "https://github.com/duckdb/dbt-duckdb.git" }
